--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-dynamic-animation:28.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -102,5 +104,8 @@ dependencies {
     def chucker_version = '3.2.0'
     debugImplementation "com.github.ChuckerTeam.Chucker:library:$chucker_version"
     releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:$chucker_version"
+
+    //RubberPicker
+    implementation 'com.github.Chrisvin:RubberPicker:v1.5'
 
 }
