--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -107,5 +108,9 @@ dependencies {
 
     //RubberPicker
     implementation 'com.github.Chrisvin:RubberPicker:v1.5'
+
+    //Calendar
+    implementation 'com.github.kizitonwose:CalendarView:1.0.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 
 }
