add back and detail item

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         jvmTarget = '1.8'
     }
     applicationVariants.all { variant ->
-        variant.buildConfigField('String', 'BASE_URL', '"https://openspacehack20.herokuapp.com/api/v1/"')
+        variant.buildConfigField('String', 'BASE_URL', '"https://hack-maldives.herokuapp.com/api/v1/"')
     }
 }
 
