--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
     implementation 'com.github.kizitonwose:CalendarView:1.0.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 
+    //Paper
+    implementation "io.paperdb:paperdb:2.7.1"
+
 }
